优化发配性能